--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -34,7 +34,56 @@
     "title3": "Проекты с рабочих мест.",
     "title4": "Как работает процесс",
     "after": "Сейчас",
-    "before": "До"
-  }
+    "before": "До",
+    "works1": "Позвоните нам",
+    "works2": "Оформите заказ",
+    "works3": "Договор",
+    "works4": "Забор ковров",
+    "works5": "Чистка",
+    "works6": "Сушка",
+    "works7": "Доставка",
+    "text1": "Позвоните нам или оставьте заявку на сайте (мы уточним детали и сообщим цену).",
+    "text2": "Закажите чистку ковров на дому или на фабрике.",
+    "text3": "Мы заключим официальный договор и начнем работу.",
+    "text4": "Мы бесплатно заберем ваши ковры.",
+    "text5": "Мы чистим и моем ковры с использованием немецкого оборудования.",
+    "text6": "Мы сушим ковры без деформации и запаха.",
+    "text7": "Мы доставим ваши ковры в удобное для вас время.",
+    "text8": "Лучшая гарантия – наша репутация, которую мы ценим! Доверьтесь нам!",
+    "btn": "Заказать сейчас",
+    "title5": "Процесс работы"
+  },
+  "comments": {
+    "text1": "Я сдал свои ковры в стирку и очень доволен результатом. Ковры вернулись полностью чистыми! Услуга быстрая и качественная. Спасибо!",
+    "text2": "Мои ковры были очень большими, и их было трудно чистить. После использования этой услуги я был очень доволен их чистотой. Вы делаете отличную работу!",
+    "text3": "Мои ковры были пыльными и имели запах. Я не верил, но после чистки они стали как новые! Отличный сервис и забота о клиентах.",
+    "text4": "Было уделено внимание каждой мелочи. Ковры вернулись чистыми, мягкими и как новыми. Качество и эффективность сервиса меня поразили!"
+  },
+  "faqs": [
+    {
+      "question": "Сколько времени занимает чистка ковров?",
+      "answer": "Процесс стирки ковров обычно занимает 3-5 дней. В это время ковры проходят глубокую очистку, сушку и подготовку к доставке."
+    },
+    {
+      "question": "Как определяется цена на ваши услуги?",
+      "answer": "Цена определяется в зависимости от размера, материала и степени загрязнения ковра."
+    },
+    {
+      "question": "Моему ковру не будет нанесён вред?",
+      "answer": "Нет, мы используем только безопасные и качественные чистящие средства."
+    },
+    {
+      "question": "Какие средства вы используете при чистке?",
+      "answer": "Мы используем экологически чистые и гипоаллергенные средства."
+    },
+    {
+      "question": "Есть ли у вас услуга забора и доставки ковров?",
+      "answer": "Да, мы предлагаем бесплатный забор и доставку ковров."
+    },
+    {
+      "question": "Можно ли постирать любой ковер?",
+      "answer": "Да, но для ковров из особых материалов существуют специальные методы стирки."
+    }
+  ]
 
 }
