--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -84,6 +84,11 @@
       "question": "Можно ли постирать любой ковер?",
       "answer": "Да, но для ковров из особых материалов существуют специальные методы стирки."
     }
-  ]
-
+  ],
+  "contact": {
+    "title": "Оставьте свою информацию",
+    "loading": "Отправляется",
+    "btn": "Отправить",
+    "input": "Ваше имя"
+  }
 }
