--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -89,6 +89,7 @@
           "title":"Leave your information",
           "loading":"Is being submitted",
           "btn":"Submit",
-          "input":"Your Name"
+          "input":"Your Name",
+          "send":"✅ Message sent successfully!"
      }
 }
