--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -89,6 +89,7 @@
     "title": "Оставьте свою информацию",
     "loading": "Отправляется",
     "btn": "Отправить",
-    "input": "Ваше имя"
+    "input": "Ваше имя",
+    "send": "✅ Сообщение успешно отправлено!"
   }
 }
